<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".Create_AccountActivity">

    <ImageView
        android:id="@+id/Register_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:src="@drawable/register"/>

    <LinearLayout
        android:id="@+id/Form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/Register_icon">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="62dp" />

        <EditText
            android:id="@+id/email_edit"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:background="@drawable/rounder_form"
            android:padding="16dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/password_edit"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:background="@drawable/rounder_form"
            android:padding="16dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/config_password_edit"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/config_password"
            android:textSize="20sp"
            android:background="@drawable/rounder_form"
            android:padding="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_Account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="16sp"
            android:layout_marginTop="15dp"/>

        <ProgressBar
            android:id="@+id/ProgressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Form_layout"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/You_have_Acconut"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Login_text_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginStart="10dp"
            android:textAlignment="center"
            android:textColor="#279EFF"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>