<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_Color"
    android:padding="15dp"
    tools:context=".NotesActivity">

    <RelativeLayout
        android:id="@+id/Title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pate_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_notes"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/Save_notes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/baseline_done_24"
            app:tint="@color/black"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/Title_layout"
        android:padding="16dp"
        android:layout_marginVertical="25dp"
        android:background="@drawable/rounder_form"
        android:backgroundTint="@color/white">

        <EditText
            android:id="@+id/notes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/title"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/notes_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:minLines="30"
            android:gravity="top"
            android:hint="@string/content"
            android:minHeight="40dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/delete_note_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_note"
        android:textSize="20sp"
        android:textColor="#FF0000"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:gravity="center"/>
</RelativeLayout>